# home-server

./: .gitignore  .gitmodules  Dockerfile  README.md  client-package.nix  flake.nix  module.nix  nginx.conf  result  server-package.nix  setup-server.service  setup.sh  streamer-package.nix
aduino/smart_lock/: smart_lock.ino
better-video-pipeline/: .gitignore  CMakeLists.txt  Makefile  README.md  action.h  cliphandler.h  coco.h  comhandler.h  config.h  inferenceutil.h  logger.h  main.cpp  ringbuffer.h  sender.h
better-video-pipeline/libs/serialib/lib/: serialib.cpp
better-video-pipeline/models/: yolo26n.xml
client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/public/: manifest.json  sw.js
client/src/: App.jsx  index.css
eps32/button/: button.ino
eps32/deadman-switch/: deadman-switch.ino
eps32/garage/: garage.ino
eps32/garage-transmitter/: garage-transmitter.ino
eps32/hydrometer/: hydrometer.ino
mobilenet/: linux-test.py  opencv_object_detection.py
monitor/: Makefile  config.h  main.cpp
motor-controller/: README.md  controller-sample.md  door-lock.h  motor-controller.ino  platformio.ini  signal.h  tracker.h
motor-controller/mount-brackets/: 3m Camera to Motor.step  3m Motor to Motor mount V2.step  3m Motor to Motor mount.step  3m Wall to Motor mount.step  README.md
motor-controller/src/: action.h  device.h  logger.h  main.cpp  motorManager.h  positionMsg.h  queue.h  queueWrapper.h  scheduler.h  serialManager.h  signal.h  simulate.h  stepper.h
opencv/: .gitignore  check-delegate.py  convert-yolo.md  object-detection.py  pycoral-test.py  raw-camera-with-night-vision.py  raw-camera.py  video-show-edgetpu.py  video-show-ultra.py  yolo11n_full_integer_quant_edgetpu.tflite  yolov8n_full_integer_quant_edgetpu.tflite
orchestrator/: go.mod  main.go  orchestrator.md
server/: .gitignore  database.sql  go.mod  go.sum  hydrometer.sql  main.go  mqtt_door.go
server/clipper/: clipper.go  output.webm  output.wmv  storage.go  storage_test.go
server/clips/: clips.txt
server/creds/: credentialer.go
server/database/: db.go  hydrometer.go  hydrometer_test.go  models.go  models_test.go
server/ffmpeg/: FFMPEG.md  output.ts  output.wmv  test.py
server/garage/: garage.go
server/hydrometer/: db.go  hydrometer.go  models.go
server/mailer/: mailer.go  mailer_test.go
server/rawframe/: framereader.go  framereader_test.go  rawframe.go  (+2 more)
(+14 files in other folders)
